--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -646,16 +646,7 @@ When completed simply click the save to PDF button at the bottom.  This will ope
 
 </script>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- EO -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-0443322862801973"
-     data-ad-slot="5548702601"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f0d2ba8bd6c6454f94fc5a0f4e774919"}'></script><!-- End Cloudflare Web Analytics -->
 
 
     <script>
