--- a/index.html
+++ b/index.html
@@ -123,18 +123,9 @@ This allocation will give you a roadmap to financial flexibility and security an
 
 <a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
 
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f0d2ba8bd6c6454f94fc5a0f4e774919"}'></script><!-- End Cloudflare Web Analytics -->
 
 
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- EO -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-0443322862801973"
-     data-ad-slot="5548702601"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
     <script>
       $(document).foundation();
