--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ This allocation will give you a roadmap to financial flexibility and security an
 
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f0d2ba8bd6c6454f94fc5a0f4e774919"}'></script><!-- End Cloudflare Web Analytics -->
 
-<!-- Officiallll -->
+<!-- Officialllll -->
 
     <script>
       $(document).foundation();
