--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="large-12 columns">
         <div class="panel">
-		<h3>Compliments of:  Franca Perciballi EPC, CHS</h3>
+<!--		<h3>Compliments of:  Franca Perciballi EPC, CHS</h3> -->
 		<p>
 
 
