Added paypal button

--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -646,6 +646,12 @@ When completed simply click the save to PDF button at the bottom.  This will ope
 
 </script>
 
+<form action="https://www.paypal.com/donate" method="post" target="_top">
+  <input type="hidden" name="hosted_button_id" value="MBS6A6RHAMPBE" />
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+  <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+  </form>
+  
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f0d2ba8bd6c6454f94fc5a0f4e774919"}'></script><!-- End Cloudflare Web Analytics -->
 
 
