--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -29,15 +29,15 @@
 
 
 <p>
-Organize your own estate.
+Organize your estate and document what you may leave behind.
 </p>
 <p>
 Fill out the fields on this form.  Add or remove sections with the buttons provided.  For instance if you have multiple credit cards simply click add more in that section.
 </p>
 <p>
-When completed simply click the save to PDF button at the bottom.  This will open your computers print dialog where you can print either to paper or to a PDF file.
+When completed click the save to PDF button at the bottom.  This will open your computers print dialog where you can print either to paper or to a PDF file.
 </p>
-<h3>It is important to note that everything you type in this form resides exclusively on your computer.  None of the data is transmitted to our servers in order to best protect your privacy.
+<h3>It is important to note that everything you type in this form resides exclusively on your computer, and nothing is saved to the site.  None of the data is transmitted to our servers in order to best protect your privacy. The contents should be considered private and protected (like you would with cash, gold, and sensistive documents)
 </h3>
 	</div>
     </div>
