--- a/index.old.html
+++ b/index.old.html
@@ -107,6 +107,40 @@ EPC in order to better guide her clients in their insurance needs. She is a loya
 professional who will guide you to make sure you are protected and cared for as your needs
 change.<p>
 
+  <h3>Some Things to Remember</h3>
+<p>
+What is the largest cash flow item you would worry about if you or your spouse were critically ill or unable to work.   How long would you be able to cover these expenses for?   Things to consider are:
+</p>
+<ul>
+<li>How much debt you have outstanding?</li>
+<li>How much are your monthly expenses?</li>
+<li>What kind of coverage do you have through your employer?</li>
+<li>How long is the income insurance replacement with your employer for?</li>
+<li>Do you actually have an income replacement?</li>
+</ul>
+
+<p>
+Do you actually have an income replacement?
+</p>
+<p>
+In case of a death, you have similar obligations.  There will also be the last expenses which will have to be considered.  Cash will be required to pay for funeral expenses, debts, possibly taxes on death, such as probate fees and capital gains and administration fees.  It’s not always possible to convert assets quickly into cash for the value you believe they should have.  For this reason life insurance can be of great value no matter how many assets one has.
+</p>
+<p>
+Long Term Planning
+</p>
+<ul>
+<li>Identify your goal</li>
+<li>Decide how much you are going to allocate towards that goal</li>
+</ul>
+<p>
+This allocation will give you a roadmap to financial flexibility and security and you will also ensure that if you encounter any road blocks  you will have structured a risk management solution.
+</p>
+<ul>
+<li>Set out your Financial Priorities</li>
+<li>Manage your risk with Life Insurance, Critical Illness Insurance, Income Replacement and Long Term Care Insurance</li>
+<li>Build your Net Worth by starting early, reducing taxes, maximizing on incentives and grants, contribute systematically,diversify amongst asset classes and review and rebalance periodically.</li>
+</ul>
+
  
     </div>
     <div class="large-4 columns">
