--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -49,9 +49,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
     </div>
 
 <form id="personalinfoForm">
-  <div class="row">Individuals Name<input type ="text" autocomplete="on"></div>
+  <div class="row">Individuals Full Legal Name<input type ="text" autocomplete="on"></div>
     <div class="row">
-      <div class="large-6 medium-6 columns">
+      <div class="large-4 medium-4 columns">
         <label>Birth Certificate Number</label>
         <input type="text" placeholder=" " />
       </div>
@@ -807,7 +807,7 @@ When completed click the save to PDF button at the bottom.  This will open your 
             </div>
           </div>
         </div>
-        
+
         <div class="large-4 medium-4 columns">
           <a href="javascript:;" onclick="printToPDF();" class = "hide-for-print large radius button"">Print To PDF</a><br>
 				</div>
