--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -43,87 +43,158 @@ When completed click the save to PDF button at the bottom.  This will open your 
                                 
         <hr />
 
-    <div class="callout panel">
-      <h5>Personal Information</h5>
-        <p>Fill out the information below for an individual.  You can add more individuals by pushing the button at the bottom of this section.</p>
-    </div>
-
-<form id="personalinfoForm">
-  <div class="row">Individuals Full Legal Name<input type ="text" autocomplete="on"></div>
-    <div class="row">
-      <div class="large-4 medium-4 columns">
-        <label>Birth Certificate Number</label>
-        <input type="text" placeholder=" " />
-      </div>
-      <div class="large-4 medium-4 columns">
-        <label>Issue Date</label>
-        <input type="text" placeholder=" " />
-      </div>
-      </div>
-      <div class="row">
-        <div class="large-4 medium-4 columns">
-          <label>Citizenship Card Number</label>
-          <input type="text" placeholder=" " />
-        </div>
-        <div class="large-4 medium-4 columns">
-          <label>Issue Date</label>
-          <input type="text" placeholder=" " />
-        </div>
-				</div>
-				<div class="row">
-          <div class="large-4 medium-4 columns">
-            <label>Driver's License Number</label>
-            <input type="text" placeholder=" " />
-          </div>
-          <div class="large-4 medium-4 columns">
-            <label>Expiry Date</label>
-            <input type="text" placeholder=" " />
-          </div>
-          </div>
-          <div class="row">
-              <div class="large-4 medium-4 columns">
-                <label>Health Card Number</label>
-                <input type="text" placeholder=" " />
-              </div>
-              <div class="large-4 medium-4 columns">
-                <label>Expiry Date</label>
-                <input type="text" placeholder=" " />
-              </div>
-          </div>
-          <div class="row">
-              <div class="large-4 medium-4 columns">
-                <label>Marriage Certificate Number</label>
-                <input type="text" placeholder=" " />
-              </div>
-              <div class="large-4 medium-4 columns">
-                <label>Issue Date</label>
-                <input type="text" placeholder=" " />
-              </div>
-          </div>
-          <div class="row">
-              <div class="large-4 medium-4 columns">
-                <label>Passport Number</label>
-                <input type="text" placeholder=" " />
-              </div>
-              <div class="large-4 medium-4 columns">
-                <label>Expiry Date</label>
-                <input type="text" placeholder=" " />
-              </div>
-          </div>
-          <div class="row">
-              <div class="large-4 medium-4 columns">
-                <label>Social Insurance/Security Number</label>
-                <input type="text" placeholder=" " />
-              </div>
-          </div>
+<form id="fullNameForm">
+  <div class="row">
+    <p>Fill out the information below for an individual.  You can add more individuals by pushing the button at the bottom of this section.</p>
+    <label>Full Legal Name</label>
+    <input type ="text" placeholder=" "></div>
 
 <hr />
+</form>
+
+<form id="driverLicenseForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Driver's License</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="birthCertificateForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Birth Certificate</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Issue Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="citizenshipForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Citizenship Certificate</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Issue Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="immigrationForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Immigration Document</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="studentIdForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Student ID</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="stateIdForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Province/State ID</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="militaryIdForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Military ID</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="healthCardForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Health Card</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="marriageCertificateForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Marriage Certificate</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Issue Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="passportForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Passport</label>
+      <input type="text" placeholder=" " />
+    </div>
+    <div class="large-4 medium-4 columns">
+      <label>Expiry Date</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
+</form>
+
+<form id="socialInsuranceForm">
+  <div class="row">
+    <div class="large-4 medium-4 columns">
+      <label>Social Insurance/Security</label>
+      <input type="text" placeholder=" " />
+    </div>
+  </div>
 </form>
 
 <form id="personalinfoFormblank">
     <div class="row">
       <div class="large-6 medium-6 columns">
-        <label>Additional Number</label>
+        <label>Additional Personal Information</label>
         <input type="text" placeholder=" " />
       </div>
       <div class="large-6 medium-6 columns">
@@ -143,7 +214,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
       </div>
 
 <form id="lawyerForm">
-				<h5>Lawyer</h5>
       <div class="row">
           <div class="large-6 large-6 columns">
             <label>Lawyer</label>
@@ -178,7 +248,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 
 
 <form id="accountantForm">
-<h5>Accountant</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Accountant</label>
@@ -212,8 +281,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="financialadvForm">
-
-      <h5>Finalcial Advisor</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Financial Advisor</label>
@@ -248,7 +315,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="homeautoForm">
-<h5>Home & Auto Insurance Advisor</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Home & Auto Insurance Advisor</label>
@@ -282,7 +348,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="insuranceadvForm">
-      <h5>Insurance Advisor</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Insurance Advisor</label>
@@ -322,8 +387,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
           </div>
 
 <form id="familydocForm">
-
-      <h5>Family Doctor</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Family Doctor</label>
@@ -357,8 +420,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="optomitristForm">
-
-      <h5>Optometrist</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Optometrist</label>
@@ -394,8 +455,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="specialdocForm">
-
-      <h5>Specialty Doctor</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Specialty Doctor</label>
@@ -435,8 +494,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
           </div>
 
 <form id="medicationsForm">
-
-      <h5>Medication</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
             <label>Name of prescription</label>
@@ -464,8 +521,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="supplementsForm">
-
-  <h5>Supplements</h5>
   <div class="row">
       <div class="large-6 medium-6 columns">
         <label>Name of supplement</label>
@@ -505,8 +560,6 @@ When completed click the save to PDF button at the bottom.  This will open your 
   </div>
 
 <form id="allergenForm">
-
-<h5>Allergy</h5>
 <div class="row">
   <div class="large-6 medium-6 columns">
     <label>Substance</label>
@@ -538,10 +591,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
           </div>
 
 <form id="checkingForm">
-      <h5>Checking Account Information</h5>
       <div class="row">
           <div class="large-6 medium-6 columns">
-            <label>Name on account</label>
+            <label>Checking Account</label>
             <input type="text" placeholder=" " />
           </div>
           <div class="large-6 medium-6 columns">
@@ -566,10 +618,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="savingsForm">
-  <h5>Savings Account Information</h5>
   <div class="row">
       <div class="large-6 medium-6 columns">
-        <label>Name on account</label>
+        <label>Savings Account</label>
         <input type="text" placeholder=" " />
       </div>
       <div class="large-6 medium-6 columns">
@@ -594,10 +645,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="rrspForm">
-  <h5>RRSP Account Information</h5>
   <div class="row">
       <div class="large-6 medium-6 columns">
-        <label>Name on account</label>
+        <label>RRSP Account</label>
         <input type="text" placeholder=" " />
       </div>
       <div class="large-6 medium-6 columns">
@@ -622,10 +672,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="tfsaForm">
-  <h5>TFSA Account Information</h5>
   <div class="row">
       <div class="large-6 medium-6 columns">
-        <label>Name on account</label>
+        <label>TFSA Account</label>
         <input type="text" placeholder=" " />
       </div>
       <div class="large-6 medium-6 columns">
@@ -650,10 +699,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
 </form>
 
 <form id="investmentForm">
-  <h5>Investment Account Information</h5>
   <div class="row">
       <div class="large-6 medium-6 columns">
-        <label>Name on account</label>
+        <label>Investment Account</label>
         <input type="text" placeholder=" " />
       </div>
       <div class="large-6 medium-6 columns">
@@ -677,6 +725,32 @@ When completed click the save to PDF button at the bottom.  This will open your 
 
 </div>
 
+<form id="employerForm">
+  <div class="row">
+      <div class="large-6 medium-6 columns">
+        <label>Employer Retirement Account</label>
+        <input type="text" placeholder=" " />
+      </div>
+      <div class="large-6 medium-6 columns">
+        <label>Name of bank</label>
+        <input type="text" placeholder=" " />
+      </div>
+</div>
+<div class="row">
+      <div class="large-4 medium-4 columns">
+        <label>Branch address</label>
+        <input type="text" placeholder=" " />
+      </div>
+      <div class="large-4 medium-4 columns">
+        <label>Phone number</label>
+        <input type="text" placeholder=" " />
+      </div>
+      <div class="large-4 medium-4 columns">
+        <label>Account number</label>
+        <input type="text" placeholder=" " />
+      </div>
+</div>
+</form>
 
 <div class="large-4 medium-4 columns">
   <a href="javascript:;" onclick="addInput('investmentForm');" class="hide-for-print small radius button"">Add More Investments</a>
@@ -685,39 +759,10 @@ When completed click the save to PDF button at the bottom.  This will open your 
 <hr />
 </form>
 
-<form id="employerForm">
-  <h5>Employer Retirement Account Information</h5>
-  <div class="row">
-      <div class="large-6 medium-6 columns">
-        <label>Name on account</label>
-        <input type="text" placeholder=" " />
-      </div>
-      <div class="large-6 medium-6 columns">
-        <label>Name of bank</label>
-        <input type="text" placeholder=" " />
-      </div>
-</div>
-<div class="row">
-      <div class="large-4 medium-4 columns">
-        <label>Branch address</label>
-        <input type="text" placeholder=" " />
-      </div>
-      <div class="large-4 medium-4 columns">
-        <label>Phone number</label>
-        <input type="text" placeholder=" " />
-      </div>
-      <div class="large-4 medium-4 columns">
-        <label>Account number</label>
-        <input type="text" placeholder=" " />
-      </div>
-</div>
-</form>
-
 <form id="cryptoForm">
-  <h5>Crypto Account Information</h5>
   <div class="row">
       <div class="large-6 medium-6 columns">
-        <label>Coin/Token/NFT</label>
+        <label>Crypto Wallet</label>
         <input type="text" placeholder="BTC " />
       </div>
       <div class="large-6 medium-6 columns">
@@ -742,10 +787,9 @@ When completed click the save to PDF button at the bottom.  This will open your 
     
 
 <form id="creditcardForm">
-  <h5>Credit Card Information</h5>
           <div class="row">
           <div class="large-6 medium-6 columns">
-            <label>Name on card</label>
+            <label>Credit Card</label>
             <input type="text" placeholder=" " />
           </div>
           <div class="large-6 medium-6 columns">
@@ -812,19 +856,23 @@ When completed click the save to PDF button at the bottom.  This will open your 
           <a href="javascript:;" onclick="printToPDF();" class = "hide-for-print large radius button"">Print To PDF</a><br>
 				</div>
 
-<button id="exportButton">Export to CSV</button>
+<button id="exportButton" class = "hide-for-print large radius button">Export to CSV</button>
+
 
 <script>
   document.getElementById('exportButton').addEventListener('click', function() {
     var data = [];
+    var header = ["Title", "Values"]; // Add a header row
+    data.push(header);
     var forms = document.querySelectorAll('form');
-    forms.forEach(form => {
-      var formId = form.getAttribute('id');
-      var values = Array.from(form.querySelectorAll('input'))
-                .map(input => input.value)
-                .filter(value => !value.includes('Remove') && !value.includes('MBS6A6RHAMPBE'));
-    var row = [formId, ...values];
-    data.push(row);
+    forms.forEach(function(form) {
+  var label = form.querySelector('label');
+  var inputs = form.querySelectorAll('input:not([type="button"])');
+  var row = [label ? label.textContent : ''];
+  inputs.forEach(function(input) {
+    row.push(input.value);
+  });
+  data.push(row);
 });
 
     var csvContent = "data:text/csv;charset=utf-8," + data.map(row => row.join(",")).join("\n");
@@ -837,6 +885,7 @@ When completed click the save to PDF button at the bottom.  This will open your 
     document.body.removeChild(link); // Clean up the DOM after download
   });
 </script>
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
