Added callout panel back.

--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -43,9 +43,12 @@ When completed click the save to PDF button at the bottom.  This will open your 
                                 
         <hr />
 
+<div class="callout panel">
+    <h5>Personal Information</h5>
+            <p>Fill out the information below for an individual.  You can add more individuals by pushing the button at the bottom of this section.</p>
+        </div>
 <form id="fullNameForm">
   <div class="row">
-    <p>Fill out the information below for an individual.  You can add more individuals by pushing the button at the bottom of this section.</p>
     <label>Full Legal Name</label>
     <input type ="text" placeholder=" "></div>
 
