Finished migrating to Foundation 6.

--- a/estateorganizer.html
+++ b/estateorganizer.html
@@ -466,7 +466,7 @@ When completed click the save to PDF button at the bottom.  This will open your 
       </div>
      </div>
   
-        <div class="large-4 medium-4 columns">
+      <div class="cell medium-6 large-6">
             <a href="javascript:;" onclick="addInput('specialistForm');" class="hide-for-print small radius button">Add More</a></div>
         <input type="button" value="Remove" class = "hide-for-print small radius button" onclick="this.parentNode.parentNode.removeChild(this.parentNode);" /><br /><br />
   
