--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <meta name="description" content="Estate Organizer is the best tool online to keep your estate organized, and it's free!" />
     <title>Estate Organizer | Welcome</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <script src="js/vendor/modernizr.js"></script>
-    <script src="js/foundation/printToPDF.js"></script>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/foundation/addInput.js"></script>
-    <script src="js/foundation/delButtons.js"></script>
+    <link rel="stylesheet" href="js/css/foundation.css" />
+    <script src="js/printToPDF.js"></script>
+    <script src="js/addInput.js"></script>
+    <script src="js/delButtons.js"></script>
+    <script src="js/js/vendor/jquery.js"></script>
+    <script src="js/js/vendor/foundation.min.js"></script>
 
   </head>
 
@@ -35,14 +34,21 @@
 
   <body>
 
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>Welcome to Estate Organizer</h1>
-	                               <!--  <div class="large-4 medium-4 columns"> -->
-                                    <a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
-                                <!-- </div> -->
+    <div class="grid-container">
+      <div class="grid-x align-middle">
+        <div class="cell auto">
+          <h1>Welcome to Estate Organizer</h1>
+        </div>
+          <div class="cell shrink">
+          <form action="https://www.paypal.com/donate" method="post" target="_top">
+            <input type="hidden" name="hosted_button_id" value="MBS6A6RHAMPBE" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+          </div>
       </div>
-    </div>
+      <a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
+
     
     <div class="row">
       <div class="large-12 columns">
@@ -87,13 +93,17 @@ Life Insurance or Segregated Funds - Review your insurance policies to make sure
 <img src="./img/sample.png">
         <hr />
 
-<a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
-
-<form action="https://www.paypal.com/donate" method="post" target="_top">
-  <input type="hidden" name="hosted_button_id" value="MBS6A6RHAMPBE" />
-  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-  <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
-  </form>
+<div class="grid-x align-center">
+  <div class="cell medium-6 large-6 text-center">
+    <a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
+    <form action="https://www.paypal.com/donate" method="post" target="_top">
+      <input type="hidden" name="hosted_button_id" value="MBS6A6RHAMPBE" />
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+       <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+    </form>
+    <a href = "./tos.html">Terms of Service</a>
+  </div>
+</div>
   
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f0d2ba8bd6c6454f94fc5a0f4e774919"}'></script><!-- End Cloudflare Web Analytics -->
 
