Updating estateinstructions content

--- a/estateinstructions.html
+++ b/estateinstructions.html
@@ -70,7 +70,10 @@
             <div class="cell auto">
 	<!--	<h3>Compliments of:  Franca Perciballi EPC, CHS</h3> -->
 
-<h4>Credentials to manage the estate</h4>
+  <div class="callout primary">
+    <h5>Credentials to manage the estate</h5>
+    <p>These credentials will allow your heirs and executor to pay bills and continue to manage your estate</p>
+  </div>
 
 <form id="cellphoneForm">
   <div class="grid-x grid-margin-x">
@@ -103,6 +106,15 @@
   <div class="grid-x grid-margin-x">
     <div class="cell medium-4 large-4">
     <label>Safe code</label>
+    <input type="text" placeholder=" " />
+  </div>
+</div>
+</form>
+
+<form id="keysForm">
+  <div class="grid-x grid-margin-x">
+    <div class="cell medium-4 large-4">
+    <label>Keys</label>
     <input type="text" placeholder=" " />
   </div>
 </div>
@@ -167,7 +179,7 @@
     <div class="grid-x">
       <div class="cell large-12">
         <div class="callout success">
-         <p>Everything you type in this form resides exclusively on your computer, and nothing is saved elsewhere.  None of the data is transmitted to our servers in order to protect your privacy. The contents should be considered private and protected (like you would with cash, gold, and sensistive documents).
+         <p>These locations will help your heirs and exeutor find your most valuable assets to ensure they are handled appropriately.
         </p>
         </div>
       </div>
