Moved save to CSV button out of html for easier scaling. Implemented no cache on the clients.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Estate Organizer is the best tool online to keep your estate organized, and it's free!" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Estate Organizer | Welcome</title>
     <link rel="stylesheet" href="js/css/foundation.css" />
     <script src="js/printToPDF.js"></script>
@@ -60,15 +64,23 @@
 <h3>Everyone has an estate</h3>
 </p>
 <p>
-Closing an estate can be a frustrating experience if all the puzzle pieces that comprise an estate are not together.
-  This tool may be helpful in assisting the executor of your estate. Organizing your estate will bring peace of mind to you and to your heirs.  Having a good record will provide an opportunity to have your personal affairs in order.
-</p>
-<p>
-You can keep a printed copy of your Estate Organizer with your will or where you keep other sensitive assets. Digital copies are only recommended for advanced users who leverage client side encryption to protect data.
-Once you have filled in the information on Estate Organizer send yourself a calendar invitiation that repeats annually to review the information and make necessary changes.
-</p>
-<h3>Additional documents required</h3>
+Closing an estate is a frustrating experience. If all the puzzle pieces that comprise an estate are not together it will take more time, which could lead to heirs carrying costs and paying more in taxes.
 
+  This tool will be helpful in assisting the executor or power of attorney of your estate. Organizing your estate will bring peace of mind to you and to your heirs.
+</p>
+
+<h3>Security</h3>
+<p>
+<ul>
+  <li>These tools do not transmit the data you enter over the internet.</li>
+  <li>Use your home printer if you choose to print them. Do not use a public printer.</li>
+  <li>Exporting to CSV can be helpful if you want/need to update the documents. Do not keep the files on your computer. Save them to a USB drive and store that with your will.</li>
+  <li>This website is configured to not save cache in your browser for additional privacy. You may also consider using a private brwoser window, typically found in the File menu of your preferred browser (i.e. Firefox, Safari, Brave, Chrome).  </li> </li>
+</ul>
+</p>
+<h3>Additional Considerations</h3>
+
+ou have filled in the information on Estate Organizer send yourself a calendar invitiation that repeats annually to review the information and make necessary changes.
 <p>
 Will - It is recommended that you review your will every three to five years or as per your lawyer’s advice.  However, you should review your will whenever circumstances in your life have changed, such as marriage as the will prior to marriage would normally be revoked, a death, separation or divorce, the birth of a child or your child or children have become of age and no longer need a guardian.  Also, if you had a specific asset which was willed and you have disposed of it.  A will should also be reviewed after a change to income tax laws or any other relevant legislation. Name an executor that you trust and that will have the time to execute your will as it is time consuming and you want to make sure that your affairs are in order for the beneficiaries.
 </p>
