Updating index.html content

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </form>
           </div>
       </div>
-      <a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
+      <a align="center" href="./estateorganizer.html" class = "hide-for-print large radius button">Click Here to for Estate Organizer!</a>  <a align="center" href="./estateinstructions.html" class = "hide-for-print large radius button">Click Here to for Estate Instructions!</a><br>
 
     
     <div class="row">
@@ -69,6 +69,16 @@ Closing an estate is a frustrating experience. If all the puzzle pieces that com
   This tool will be helpful in assisting the executor or power of attorney of your estate. Organizing your estate will bring peace of mind to you and to your heirs.
 </p>
 
+<h3>Features</h3>
+
+<p>2 tools to help you keep your estate organized.</p>
+<ol>
+  <li>Organizer - Document important ID's, accounts, and contacts so your heirs/executors can feel confident they have managed your entire estate.</li>
+  <li>Instructions - Document where and how your heirs/executors can access your computers, safe, and other places important assets are stored.</li>
+</ol>
+
+<a href="./estateorganizer.html" class = "hide-for-print medium radius button"">Click Here to Use Organizer!</a><br>
+<a href="./estateinstructions.html" class = "hide-for-print medium radius button"">Click Here to Use Instructions!</a><br>
 <h3>Security</h3>
 <p>
 <ul>
@@ -80,22 +90,12 @@ Closing an estate is a frustrating experience. If all the puzzle pieces that com
 </p>
 <h3>Additional Considerations</h3>
 
-ou have filled in the information on Estate Organizer send yourself a calendar invitiation that repeats annually to review the information and make necessary changes.
-<p>
-Will - It is recommended that you review your will every three to five years or as per your lawyer’s advice.  However, you should review your will whenever circumstances in your life have changed, such as marriage as the will prior to marriage would normally be revoked, a death, separation or divorce, the birth of a child or your child or children have become of age and no longer need a guardian.  Also, if you had a specific asset which was willed and you have disposed of it.  A will should also be reviewed after a change to income tax laws or any other relevant legislation. Name an executor that you trust and that will have the time to execute your will as it is time consuming and you want to make sure that your affairs are in order for the beneficiaries.
-</p>
-<p>
-  Powers of Attorney - In most provinces there are two types of powers of attorney, medical and financial, in case one becomes mentally incapacitated.
-</p>
-
-<h3>Other Considerations</h3>
-<p>
-Probate Fees - At death the executor will most likely have to have a court declare your will is valid and in order to deal with certain assets.  Depending on the amount of the assets, banks, trust companies and other investment companies will require to at least having a notarized copy of the will or probated prior to releasing the funds.  Most provinces will charge probate fees.  If you plan your affairs so that your assets pass directly to your heirs the costs of probate fees could be reduced or eliminated.  However careful consideration should be given when planning for probate and you must do your due diligence.
-</p>
-<p>
-Life Insurance or Segregated Funds - Review your insurance policies to make sure that you have enough insurance to protect your family in case of an untimely death, last expenses and tax implications.  Also review the beneficiary designations for all policies to confirm your wishes.  
-</p>
-
+<ul>
+<li>Will - It is recommended that you review your will every three to five years or as per your lawyer’s advice.  However, you should review your will whenever circumstances in your life have changed, such as marriage as the will prior to marriage would normally be revoked, a death, separation or divorce, the birth of a child or your child or children have become of age and no longer need a guardian.  Also, if you had a specific asset which was willed and you have disposed of it.  A will should also be reviewed after a change to income tax laws or any other relevant legislation. Name an executor that you trust and that will have the time to execute your will as it is time consuming and you want to make sure that your affairs are in order for the beneficiaries.</li>
+<li>Powers of Attorney - In most provinces there are two types of powers of attorney; medical and financial.</li>
+<li>Probate Fees - At death the executor will most likely have to have a court declare your will is valid and in order to deal with certain assets.  Depending on the amount of the assets, banks, trust companies and other investment companies will require to at least having a notarized copy of the will or probated prior to releasing the funds.  Most provinces will charge probate fees.  If you plan your affairs so that your assets pass directly to your heirs the costs of probate fees could be reduced or eliminated.  However careful consideration should be given when planning for probate and you must do your due diligence.</li>
+<li>Life Insurance or Segregated Funds - Review your insurance policies to make sure that you have enough insurance to protect your family in case of an untimely death, last expenses and tax implications.  Also review the beneficiary designations for all policies to confirm your wishes.  </li>
+</ul>
 
 
       </div>
@@ -107,7 +107,7 @@ Life Insurance or Segregated Funds - Review your insurance policies to make sure
 
 <div class="grid-x align-center">
   <div class="cell medium-6 large-6 text-center">
-    <a href="./estateorganizer.html" class = "hide-for-print large radius button"">Click Here to Use it!</a><br>
+    <a align="center" href="./estateorganizer.html" class = "hide-for-print large radius button">Click Here to for Estate Organizer!</a>  <a align="center" href="./estateinstructions.html" class = "hide-for-print large radius button">Click Here to for Estate Instructions!</a><br>
     <form action="https://www.paypal.com/donate" method="post" target="_top">
       <input type="hidden" name="hosted_button_id" value="MBS6A6RHAMPBE" />
       <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
