--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Estate Organizer | Welcome</title>
+    <title>Free Estate Organizer Tool – Simplify Your Estate Planning & Executor Duties.</title>
     <link rel="stylesheet" href="js/css/foundation.css" />
     <script src="js/printToPDF.js"></script>
     <script src="js/addInput.js"></script>
@@ -19,11 +19,14 @@
         body {
     font-family: 'Open Sans', sans-serif;
     line-height: 1.6;
-    color: #333;
-  }
-  h1, h2, h3 {
+    color: #F8F9FA;
+    background-image: url('./edited_background1.jpg');
+    background-repeat: no-repeat;    /* Prevents the image from repeating */
+    background-size: cover;          /* Ensures the image covers the whole background */
+    background-position: center;     /* Centers the image */  }
+  h1, h2, h3, p {
     font-family: 'Montserrat', sans-serif;
-    color: #222;
+    color: #F8F9FA;
     margin-bottom: 0.5em;
   }
     </style>
