--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     color: #F8F9FA;
     margin-bottom: 0.5em;
   }
+  a:link {color: #F8F9FA};
+  a:visited {color: #F8F9FA};
     </style>
   </head>
 
@@ -153,7 +155,8 @@ Closing an estate is a frustrating experience. If all the puzzle pieces that com
       <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
        <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
     </form>
-    <a href = "./tos.html">Terms of Service</a>
+    <a href = "./tos.html">Terms of Service</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLScYRkC5vGMZbdmxQ_3S-y4wQPbjfYIJi-fs2q-Ko9joH-458Q/viewform?usp=header">Feedback</a>
+
   </div>
 </div>
   
